# franken_whisper

./: .gitignore  .skill-loop-progress.md  .ubsignore  AGENTS.md  AGENT_NAME  ALIEN_RECOMMENDATIONS.md  CHANGELOG.md  Cargo.toml  DISCREPANCIES.md  EXISTING_LEGACY_WHISPER_STRUCTURE.md  FEATURE_PARITY.md  PLAN_TO_PORT_WHISPER_STACK_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  RECOVERY_RUNBOOK.md  SYNC_STRATEGY.md  TODO_IMPLEMENTATION_TRACKER.md  codex.mcp.json  gemini.mcp.json  install.sh
.beads/: issues.jsonl
.beads/.br_history/: issues.20260225_201529.jsonl  issues.20260225_201533.jsonl  issues.20260225_205729.jsonl  issues.20260225_205737.jsonl  issues.20260312_060105_857662184.jsonl  issues.20260312_060312_299454589.jsonl  issues.20260312_105228_307657903.jsonl  issues.20260312_105239_695798980.jsonl  issues.20260312_105326_162076764.jsonl  issues.20260312_105418_670784013.jsonl  issues.20260312_105426_877075184.jsonl  issues.20260312_105537_557227609.jsonl  issues.20260312_105804_692097619.jsonl  issues.20260312_105809_885514022.jsonl  issues.20260312_105826_691933355.jsonl  issues.20260312_105900_695289971.jsonl  issues.20260312_105904_873113651.jsonl  issues.20260312_105921_963490562.jsonl  issues.20260312_110229_984782539.jsonl  issues.20260312_110237_385819970.jsonl  issues.20260312_110255_974656626.jsonl  issues.20260312_110331_817294662.jsonl  issues.20260312_110337_882263842.jsonl  issues.20260312_110412_414730737.jsonl  issues.20260312_110436_534823078.jsonl  issues.20260312_110442_552964649.jsonl  issues.20260312_110516_895599197.jsonl  issues.20260312_111152_907672018.jsonl  issues.20260312_111157_354796810.jsonl  issues.20260312_111213_673526453.jsonl  issues.20260312_152353_010112170.jsonl  issues.20260312_152402_319488489.jsonl  issues.20260312_152453_617100067.jsonl  issues.20260312_152518_572159459.jsonl  issues.20260312_152532_783112752.jsonl  issues.20260312_153008_085380186.jsonl  issues.20260312_153030_915330082.jsonl  issues.20260312_153058_074884768.jsonl  issues.20260312_153527_006357030.jsonl  issues.20260312_164418_255302777.jsonl  (+328 more)
.beads/.br_recovery/: beads.db-shm.20260604_234946_026099000.truncated-wal
.cargo/: config.toml
.github/workflows/: dist.yml  release-automation.yml
benches/: native_engine_bench.rs  normalize_bench.rs  pipeline_bench.rs  storage_bench.rs  sync_bench.rs  tty_bench.rs
docs/: FEATURE_PARITY.md  FRANKENENGINE_YOUTUBE_CIPHER_JS_GAP_REPORT.md  FRANKENTUI_METHODOLOGY.md  NATIVE_YOUTUBE_FEASIBILITY.md  NEGATIVE_EVIDENCE.md  PERF_LEDGER.md  benchmark_guardrails.json  benchmark_regression_policy.md  closeout_residual_risks_2026-02-25.md  conformance-contract.md  cross_repo_change_summary_2026-02-25.md  definition_of_done.md  engine_compatibility_spec.md  legacy_analysis.md  master-todo-bead-map.md  native_engine_contract.md  next_execution_packet_2026-02-25.md  operational-playbook.md  risk-register.md  tty-audio-protocol.md  tty-replay-guarantees.md
examples/: cold_e2e_probe.rs  decoder_attrib.rs  decoder_perf_probe.rs  e2e_probe.rs  encoder_load_probe.rs  encoder_perf_probe.rs  full_load_probe.rs  gelu_probe.rs  gemm_shape_probe.rs  gemv_2row_perf.rs  gemv_f16_probe.rs  int8_logits_probe.rs  int8_mlp_probe.rs  matmul_alloc_probe.rs  mel_perf_probe.rs  model_load_probe.rs  native_ab.rs  native_if_scale.rs  realistic_e2e_probe.rs  softmax_probe.rs
scripts/: check_benchmark_guardrails.sh  convert_to_safetensors.py  demo_tty_audio.sh  fetch_aux_models.sh  fetch_test_models.sh  gen_native_fixtures.py  run_quality_gates_rch.sh
src/: accelerate.rs  audio.rs  cli.rs  conformance.rs  error.rs  export.rs  lib.rs  logging.rs  main.rs  model.rs  orchestrator.rs  process.rs  replay_pack.rs  robot.rs  speculation.rs  storage.rs  streaming.rs  sync.rs  tty_audio.rs  tui.rs
src/backend/: insanely_fast.rs  insanely_fast_native.rs  mod.rs  native_audio.rs  normalize.rs  whisper_cpp.rs  whisper_cpp_native.rs  whisper_diarization.rs  whisper_diarization_native.rs
src/native_engine/: decode.rs  decoder.rs  dtw.rs  encoder.rs  ggml.rs  mel.rs  mod.rs  nn.rs  tokenizer.rs  weights.rs
src/youtube/: mod.rs  naming.rs  pipeline.rs  render.rs  ytdlp.rs
tests/: COVERAGE.md  backend_mock_tests.rs  benchmark_tests.rs  cli_integration.rs  conformance_comparator_tests.rs  conformance_harness.rs  e2e_pipeline_tests.rs  generate_fixtures.rs  gpu_cancellation_tests.rs  helpers_check.rs  metamorphic_accelerate_tests.rs  metamorphic_audio_tests.rs  metamorphic_speculation_tests.rs  native_engine_e2e.rs  no_canned_phrases.rs  recovery_smoke.rs  replay_envelope.rs  robot_contract_tests.rs  speculation_adaptive_tests.rs  speculation_core_tests.rs  speculation_type_tests.rs  speculative_e2e_tests.rs  speculative_pipeline_tests.rs  speculative_streaming_pipeline_tests.rs  stage_order_tests.rs  tty_control_tests.rs  tty_correction_tests.rs  tty_telemetry_tests.rs  tui_snapshot_tests.rs  youtube_integration.rs
tests/fixtures/conformance/: all_fields_exact_match.json  confidence_drift_ignored.json  confidence_out_of_bounds_invariants.json  custom_tolerance_edge_case.json  empty_and_punctuation_segments.json  empty_text_invariants.json  invalid_timestamp_ordering.json  large_segment_count.json  length_mismatch_failure.json  long_segment_duration.json  missing_timestamps_both_none.json  missing_timestamps_drift.json  multi_dimension_drift.json  negative_timestamp_invariants.json  nonfinite_timestamp_invariants.json  overlap_allowed_policy.json  overlapping_speakers_policy.json  overlapping_speakers_rejected.json  relaxed_tolerance_passes.json  segment_baseline.json  segment_count_mismatch.json  segment_drift_failure.json  speaker_exact_match_pass.json  speaker_label_crossengine.json  speaker_label_whitespace_rejected.json  speaker_only_drift.json  text_case_mismatch_strict.json  text_mismatch_allowed_relaxed.json  text_trim_normalization.json  timestamp_boundary_violation.json  timestamp_edge_at_tolerance.json  timestamp_epsilon_boundaries.json  (+10 more)
tests/helpers/: mod.rs
tests/mocks/: mock_diarization.py  mock_insanely_fast.sh  mock_whisper_cpp.sh
(+117 files in other folders)
