[package]
name = "franken_whisper"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "Agent-first Rust ASR orchestration stack with ffmpeg normalization and frankensqlite-backed persistence"

[features]
default = []
tui = ["dep:ftui"]
gpu-frankentorch = ["dep:ft-api"]
gpu-frankenjax = ["dep:fj-api", "dep:fj-core"]

# Two binaries from the same entry point: the full name and the short `fw`
# alias agents and humans actually type. Listing them explicitly disables the
# implicit package-named bin, so both are declared here.
[[bin]]
name = "franken_whisper"
path = "src/main.rs"

[[bin]]
name = "fw"
path = "src/main.rs"

[dependencies]
ctrlc = "3.4"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
crc32fast = "1.4"
flate2 = "1.1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.17.1"
thiserror = "2.0.12"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
sha2 = "0.10"
which = "7.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hound = "3.5.1"
symphonia = { version = "0.5.5", features = ["mp3", "aac", "isomp4", "ogg", "flac", "vorbis", "wav", "pcm"] }

asupersync = { version = "0.3.1", default-features = false }
franken-kernel = "0.3.1"
franken-evidence = "0.3.1"
franken-decision = "0.3.1"
fsqlite = { path = "../frankensqlite/crates/fsqlite" }
fsqlite-types = { path = "../frankensqlite/crates/fsqlite-types" }

# FrankenTorch compute kernels for the in-process native whisper engine
# (rayon-parallel GEMM, softmax, gelu; f16 storage types). These are
# first-party FrankenSuite crates — see the bd-frp7 epic.
ft-kernel-cpu = { path = "../frankentorch/crates/ft-kernel-cpu" }
ft-core = { path = "../frankentorch/crates/ft-core" }
# Direct dep on `half` (same crate ft-core re-exports as `Float16`) for its
# `HalfFloatSliceExt::convert_to_f32_slice` SIMD bulk f16->f32 dequant — the
# `std` feature enables runtime aarch64 `fp16` / x86 `f16c` vector paths used
# by the f16-compute GEMV kernels (nn::gemv_f16). Pinned to ft-core's version.
half = { version = "2.7", features = ["std"] }

ftui = { path = "../frankentui/crates/ftui", default-features = false, features = ["crossterm"], optional = true }
ft-api = { path = "../frankentorch/crates/ft-api", optional = true }
fj-api = { path = "../frankenjax/crates/fj-api", optional = true }
fj-core = { path = "../frankenjax/crates/fj-core", optional = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Targeted lint hardening — pedantic/nursery deferred until missing-docs addressed
enum_glob_use = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
unused_self = "warn"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# For the f16_gemv_dequant bench to construct `Float16` weights directly.
ft-core = { path = "../frankentorch/crates/ft-core" }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "normalize_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false

[[bench]]
name = "tty_bench"
harness = false

[[bench]]
name = "sync_bench"
harness = false

[[bench]]
name = "native_engine_bench"
harness = false

# Profiling build: full optimization + symbols/frame pointers so samplers
# (samply/Instruments) can attribute frames. Never profile the size-optimized
# `release` profile (opt-level="z", strip=true → useless flames).
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false
panic = "unwind" # deliberate override of release's abort: scoped-thread panics must unwind for clean bench/profiler teardown

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
